feat: Create actions to BookController
