# swagger/v1/swagger.yaml
@@ -36,12 +36,55 @@ paths:
               required:
               - title
               - content
+    get:
+      summary: Retrieves all books
+      tags:
+      - Books
+      responses:
+        '200':
+          description: books found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  title:
+                    type: string
+                  description:
+                    type: string
+                  genre:
+                    type: string
+                  author:
+                    type: string
+                  publication_at:
+                    type: string
+                  publisher:
+                    type: string
+            application/xml:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  title:
+                    type: string
+                  description:
+                    type: string
+                  genre:
+                    type: string
+                  author:
+                    type: string
+                  publication_at:
+                    type: string
+                  publisher:
+                    type: string
   "/books/{id}":
     get:
       summary: Retrieves a book
       tags:
       - Books
-      - Another Tag
       parameters:
       - name: id
         in: path
